# opProject2

./: README.md  func.cpp  func.h  main.cpp  main01.cpp  mainC.cpp  mainV.cpp  prog  studentai100.txt  studentai1000.txt  user.h
code/: CMakeLists.txt  func.cpp  func.h  main.cpp  makefile  person.h  run.bat  test.cpp
doc/html/: annotated.html  annotated_dup.js  class_person-members.html  class_person.html  class_person.js  class_student-members.html  class_student.html  class_student.js  classes.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_050edd66366d13764f98250ef6db77f6.js  doxygen_crawl.html  files.html  func_8cpp.html  func_8cpp.js  func_8h.html  func_8h.js  func_8h_source.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  person_8h.html  person_8h_source.html
doc/html/search/: all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  pages_0.js  pages_1.js  related_0.js  searchdata.js  variables_1.js
opProject/: 10.txt  Kietiakai.txt  a.txt  func.cpp  func.h  main.cpp  st.txt  std.txt  stud.txt  stud.txxt
opProject.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  run.bat  test.cpp
(+4 files in other folders)
